# ourdb

./: .gitignore  Cargo.toml  README.adoc  README.md  build.gradle.kts  settings.gradle.kts
models/addition/: addition.py
scripts/: before_deploy.sh  script.sh
src/: main.rs  version.rs
src/embed/: main.rs
src/main/kotlin/com/viglet/ourdb/: ourdb.kt  version.kt
src/server/: addition.rs  main.rs
