[package]
name = "ourdb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
rustflags = ["-C", "prefer-dynamic"]

[dependencies]
tensorflow = "0.17.0"

[lib]
name = "embed"
crate-type = ["rlib", "dylib"]
path = "src/embed/main.rs"

[[bin]]
name = "ourdb"
path = "src/server/main.rs"

